minor error fixed

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -15,7 +15,7 @@
         android:id="@+id/nav_ranking"
         android:name="com.example.minigames.ui.gallery.GalleryFragment"
         android:label="@string/menu_ranking"
-        tools:layout="@layout/fragment_gallery" />
+        tools:layout="@layout/fragment_ranking" />
 
     <fragment
         android:id="@+id/nav_slideshow"
