--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,7 +13,7 @@
 
     <fragment
         android:id="@+id/nav_ranking"
-        android:name="com.example.minigames.ui.gallery.GalleryFragment"
+        android:name="com.example.minigames.ui.gallery.RankingFragment"
         android:label="@string/menu_ranking"
         tools:layout="@layout/fragment_gallery" />
 
