--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -27,7 +27,7 @@
 
     <fragment
         android:id="@+id/nav_ranking"
-        android:name="com.example.minigames.ui.gallery.RankingFragment"
+        android:name="com.example.minigames.ui.ranking.RankingFragment"
         android:label="Ranking"
         tools:layout="@layout/fragment_ranking" />
 
