--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -33,7 +33,7 @@
 
     <fragment
         android:id="@+id/nav_slideshow"
-        android:name="com.example.minigames.ui.slideshow.SlideshowFragment"
+        android:name="com.example.minigames.ui.profile.SlideshowFragment"
         android:label="Slideshow"
         tools:layout="@layout/fragment_slideshow" />
 
