--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="colorPrimary">#6ead3a</color>
     <color name="colorPrimaryDark">#236416</color>
     <color name="colorAccent">#793aad</color>
+    <color name="splash_background">#249FD4</color>
 </resources>
